--- a/src/app/pages/compania/compania.component.html
+++ b/src/app/pages/compania/compania.component.html
@@ -9,7 +9,7 @@
       </div>
       <h2>Nuestra compañía</h2>
       <p>
-        Somos una compañía que busca satisfacer la necesidad de cambio de divisas, simplificando el envío de dineros a Venezuela.
+        Somos una compañía que busca satisfacer la necesidad de cambio de divisas, simplificando el envío de dineros al extranjero.
         Contamos con amplia experiencia en el mercado, la que brinda credibilidad y confianza a nuestros clientes.
       </p>
     </div>
