--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,12 +1,12 @@
 
-<div class="container color-inicio p-1">
+<div class="container color-inicio ">
 
   <div class="row">
 
     <div class="col-md-6 ">
       <div class="texto-izquierdo p-3">
         <span class="texto-azul">Buscamos satisfacer la necesidad de cambio de divisas</span> 
-        <span class="texto-negro"> simplificando el envío de dinero a Venezuela.</span>
+        <span class="texto-negro"> simplificando el envío de dinero al extranjero.</span>
       </div>
 
       <div class="login-inicio p-5">
