--- a/src/app/pages/inicio/simula-cambio/simula-cambio.component.html
+++ b/src/app/pages/inicio/simula-cambio/simula-cambio.component.html
@@ -1,38 +1,98 @@
 <div class="tasa p-4">
+  <div class="titulo pb-5">
+    <span class="titulo-negrita">Tasa del día </span>
 
-  <div class="titulo">
-    <span class="titulo-negrita">Tasa del día </span> <br> <span class="titulo-tasa"> {{ mostrarTasa() }} Bs/CLP</span>
+    <!-- <br> <span class="titulo-tasa"> {{ mostrarTasa() }} Bs/{{codMon()}}</span> -->
   </div>
-  <div class="formulario ">
-    <form  action="">
+  <div class="row mb-3">
+    <div class="col-4">
+      <div class="text-center cuadro-tasa">
+        <div class="bandera">
+          <img src="assets/img/chile.png" />
+        </div>
+        <span class="num-tasa">
+          {{ p_tasa?.tasa }}
+        </span>
+        <span class="desc-tasa">
+          Bs/CLP
+        </span>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="text-center cuadro-tasa">
+        <div class="bandera">
+          <img src="assets/img/colombia.png" />
+        </div>
+        <span class="num-tasa">
+          {{ p_tasa?.colombia }}
+        </span>
+        <span class="desc-tasa">
+          Bs/COP
+        </span>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="text-center cuadro-tasa">
+        <div class="bandera">
+          <img src="assets/img/argentina.png" />
+        </div>
+        <span class="num-tasa">
+          {{ p_tasa?.argentina }}
+        </span>
+        <span class="desc-tasa">
+          Bs/ARS
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="formulario "> 
+    <form action="">
       <div class="form-group">
-        <label class="control-label">Pesos a cambiar</label>
+        <label class="control-label">{{ cod_mon }} a cambiar</label>
         <div class="form-group">
           <div class="input-group mb-2">
             <div class="input-group-prepend">
-              <span class="input-group-text">CLP$</span>
+              <span class="input-group-text">{{ cod_mon }}$</span>
             </div>
-            <input [(ngModel)]="pesos" name="pesos" (keyup)="calculaBolivares()" type="text" class="form-control" aria-describedby="pesos" numeric >
+            <input
+              [(ngModel)]="pesos"
+              name="pesos"
+              (keyup)="calculaBolivares()"
+              type="text"
+              class="form-control"
+              aria-describedby="pesos"
+              numeric
+            />
           </div>
-          <small id="pesos" class="form-text ">Monto mínimo para trasferir CLP$ 10.000 </small>
+          <small id="pesos" class="form-text "
+            >Monto mínimo para trasferir {{ cod_mon }} 10.000
+          </small>
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label">Bolivares</label>
+        <label class="control-label"></label>
         <div class="form-group">
           <div class="input-group mb-2">
             <div class="input-group-prepend">
               <span class="input-group-text">Bs$</span>
             </div>
-            <input [(ngModel)]="bolivares" name="bolivares" (keyup)="carculaPesos()" type="text" class="form-control" aria-describedby="bolivares" numeric >
+            <input
+              [(ngModel)]="bolivares"
+              name="bolivares"
+              (keyup)="carculaPesos()"
+              type="text"
+              class="form-control"
+              aria-describedby="bolivares"
+              numeric
+            />
           </div>
           <small id="bolivares" class="form-text "> </small>
         </div>
       </div>
     </form>
     <div class="pie">
-      Si quieres hacer tu transferencia <a class="link-pie" routerLink="/registro">regístrate aquí.</a>
+      Si quieres hacer tu transferencia
+      <a class="link-pie" routerLink="/registro">regístrate aquí.</a>
     </div>
   </div>
-  
 </div>
