--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,28 +1,63 @@
-<hr>
+<hr />
 <div class="container">
   <footer id="footer">
     <div class="row">
-      <div class="col-lg-12">
-
-        <ul class="list-unstyled sociales" >
-          
-          <li>
-            <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-          </li>
-          <li>
-            <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
-          </li>
-
-        </ul>
-        <p>Desarrollado por
-          <a href="#">123depositos</a>.</p>
-
+      <div class="col-lg-6" *ngIf="
+          _usuario.usuario.pais == 'Chile' || _usuario.usuario.pais == undefined
+        ">
+        Supervisados por: <br />
+        <img src="assets/img/uaf_logo.png" alt="UAF" />
       </div>
+      <div class="col-lg-6">
+        <ul class="list-unstyled sociales">
+          <li>
+            <a href="https://www.instagram.com/123depositos_/" target="_blank"><i class="fab fa-instagram"></i>
+              Instagram</a>
+          </li>
+          <li>
+            <a href="https://m.facebook.com/123depositoscom-235978300595087/?ref=bookmarks" target="_blank"><i
+                class="fab fa-facebook"></i> Facebook</a>
+          </li>
+          <li>
+            <a href="https://wa.me/56935689629" target="_blank" *ngIf="
+                _usuario.usuario.pais == 'Chile' ||
+                _usuario.usuario.pais == undefined
+              "><i class="fab fa-whatsapp"></i> Whatsapp</a>
+            <a href="https://wa.me/573217584159" target="_blank" *ngIf="_usuario.usuario.pais == 'Colombia'"><i
+                class="fab fa-whatsapp"></i> Whatsapp</a>
+            <a href="https://wa.me/5492616300249" target="_blank" *ngIf="_usuario.usuario.pais == 'Argentina'"><i
+                class="fab fa-whatsapp"></i> Whatsapp</a>
+          </li>
+        </ul>
+        <p>Desarrollado por <a href="#">123depositos</a>.</p>
+      </div>
+    </div>
+    <div class="fixed-bottom text-right">
+      <div class="mr-2">
+
+        <a href="https://wa.me/56935689629" target="_blank" *ngIf="
+          _usuario.usuario.pais == 'Chile' ||
+          _usuario.usuario.pais == undefined
+        ">
+          <span style="font-size: 3rem; color: darkgreen">
+            <i class="fab fa-whatsapp "></i>
+          </span>
+        </a>
+        <a href="https://wa.me/573217584159" target="_blank" *ngIf="_usuario.usuario.pais == 'Colombia'">
+
+          <span style="font-size: 3rem; color: darkgreen">
+            <i class="fab fa-whatsapp "></i>
+          </span>
+        </a>
+        <a href="https://wa.me/5492616300249" target="_blank" *ngIf="_usuario.usuario.pais == 'Argentina'">
+          <span style="font-size: 3rem; color: darkgreen">
+            <i class="fab fa-whatsapp "></i>
+          </span>
+
+        </a>
+      </div>
+
     </div>
 
   </footer>
-
 </div>
