--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,59 +1,64 @@
 <!-- <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary"> -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-  <div class="container">
-    <a routerLink="inicio" class="navbar-brand"> <img src="assets/img/123depositos_1.png" width="150px"> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="inicio">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="compania">Nuestra compañía</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="como">Cómo funciona</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias">Transferencias <span class="caret"></span></a>
-          <div class="dropdown-menu" aria-labelledby="transferencias">
+  <!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> -->
+  <a routerLink="inicio" class="navbar-brand"> <img src="assets/img/123depositos_1.png" height="50"> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="inicio">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="compania">Nuestra compañía</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="como">Cómo funciona</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias">Transferencias <span
+            class="caret"></span></a>
+        <div class="dropdown-menu" aria-labelledby="transferencias">
 
-            <a class="dropdown-item" routerLink="abono">Transferir</a>
-            <a class="dropdown-item" routerLink="transferencias">Mis transferencias</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="contacto">Contacto</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item p-1" *ngIf="!_usuario.usuario.id_usuario">
-          <a class="btn btn-outline-primary btn-sm " routerLink="login">
-            Ingresar
-          </a>
+          <a class="dropdown-item" routerLink="abono">Transferir</a>
+          <a class="dropdown-item" routerLink="transferencias">Mis transferencias</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="contacto">Contacto</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item p-1" *ngIf="!_usuario.usuario.id_usuario">
+        <a class="btn btn-outline-primary btn-sm " routerLink="login">
+          Ingresar
+        </a>
+      </li>
+      <li class="nav-item p-1" *ngIf="!_usuario.usuario.id_usuario">
+        <a class=" btn btn-outline-primary btn-sm" routerLink="registro">Registrar</a>
+      </li>
+      <li class="nav-item dropdown" *ngIf="_usuario.usuario.id_usuario">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="usuario"> <i class="fas fa-user"></i>
+          <span class="caret"></span></a>
+        <div class="dropdown-menu usuario" aria-labelledby="usuario">
+          <p>{{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}</p>
+          <a class="btn btn-sm btn-outline-primary" href="#" (click)="cerrar()">Cerrar sesión</a>
+        </div>
+      </li>
 
-        </li>
-        <li class="nav-item p-1" *ngIf="!_usuario.usuario.id_usuario">
-          <a class=" btn btn-outline-primary btn-sm" routerLink="registro">Registrar</a>
-        </li>
-        <li class="nav-item dropdown" *ngIf="_usuario.usuario.id_usuario">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="usuario"> <i class="fas fa-user"></i> <span
-              class="caret"></span></a>
-          <div class="dropdown-menu usuario" aria-labelledby="usuario">
+    </ul>
 
-            <p>{{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}</p>
+    <!-- formulario de paises -->
+    <form class="form-inline my-2 my-lg-0">
+      <select (change)="cambiaPais($event)" class="form-control mr-sm-2 form-control-sm">
+        <option [selected]="_usuario.usuario?.pais == 'Chile'" value="Chile">Chile</option>
+        <option [selected]="_usuario.usuario?.pais == 'Argentina'" value="Argentina">Argentina</option>
+        <option [selected]="_usuario.usuario?.pais == 'Colombia'" value="Colombia">Colombia</option>
 
-
-            <a class="btn btn-sm btn-outline-primary" href="#" (click)="cerrar()">Cerrar sesión</a>
-
-          </div>
-        </li>
-
-      </ul>
-
-    </div>
+      </select>
+    </form>
   </div>
+
 </nav>
